--- a/src/pages/Login_Register/Login_Register_shared.scss
+++ b/src/pages/Login_Register/Login_Register_shared.scss
@@ -1,26 +1,26 @@
-@import "../../index.scss";
-.container__form {
-  color: #444;
-  // color: #2f5735e3;
+//TODO: separate logic for logic and register
 
-  min-height: 96vh;
+.container__form {
+  background-color: #000;
+  background-image: url("../../img/br_01.jpg");
+  // color: #2f5735e3;
+  background-size: 100%;
+  background-size: 100vw;
+  background-repeat: no-repeat;
+  background-position: center;
+
   width: 100%;
+  min-height: 96vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  //background-color: #08415c;
-  //background-color: #595f72;
-  background-color: $background-main;
-  background-color: #000;
-  background-size: 100%;
-  background-repeat: no-repeat;
-  background-size: 100vw;
-  background-position: center;
 
-  flex-shrink: 1;
+  // flex-shrink: 1;
 
   .wrapper__form {
+    // background-color: transparent;
+    color: white;
     display: flex;
     flex-direction: column;
     width: 290px;
@@ -30,79 +30,112 @@
     padding: 10px 40px;
     border-radius: 6px;
     box-shadow: 0px 0px 8px 1px #222;
-    background-color: transparent;
-    color: white;
+    padding-bottom: 25px;
 
     h2 {
-      display: flex;
-      justify-content: center;
+      color: #2f5735e3;
+      padding: 8px 0;
       font-family: Helvetica, sans-serif;
       font-size: x-large;
       font-weight: lighter;
-      margin-top: 5px;
-      color: #222;
-      color: #2f5735e3;
+      text-align: center;
     }
+
     form {
+      // background-color: orange;
       width: 100%;
-      flex-direction: column;
       display: flex;
+      flex-direction: column;
       flex-wrap: wrap;
     }
 
     label {
       margin-bottom: 5px;
     }
-    .info {
-      //padding-bottom: 20px;
-      display: inline-block;
+
+    .lastName label,
+    .email label {
+      // background-color: blueviolet;
+      padding-top: 2px;
     }
 
     input {
+      background-color: transparent;
+      background-color: rgba(255, 255, 255, 0.151);
+      color: white;
       padding: 5px 5px;
       border-radius: 5px;
       outline: none;
       border: 1px solid #d6d1d5;
+
+      //PLACEHOLDER
+      &::placeholder {
+        color: #ffffffa4;
+        font-size: 1.2rem;
+        font-weight: lighter;
+      }
     }
 
-    input::placeholder {
-      font-size: 1.2rem;
-      font-weight: lighter;
-      color: rgba(187, 187, 187, 0.698);
+    .info {
+      // background-color: #2f9dac;
+      padding-bottom: 10px;
     }
 
     button {
+      background-color: transparent;
+      color: #fefefe;
       min-width: 100%;
-      cursor: pointer;
       margin: 15px 5px 8px 0;
       padding: 1rem;
       border: none;
       border-radius: 4px;
-      background-color: transparent;
       box-shadow: 0 0 5px 1px;
 
-      color: #fefefe;
-    }
-    button:hover {
-      opacity: 0.8;
+      &:hover {
+        opacity: 0.8;
+      }
     }
 
     .extended {
+      // background-color: aquamarine;
       display: flex;
+      justify-content: space-between;
+      align-items: center;
       padding-top: 6px;
+
+      width: 100%;
+      min-height: 30px;
+
+      #label-newsletter {
+        // background-color: limegreen;
+        width: 30%;
+        // padding-right: -40px;
+      }
     }
-    .error {
-      color: #db2269;
-      font-size: 1.2rem;
-      display: relative;
+    .choices {
+      // background-color: blue;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 50%;
     }
+
+    // .error {
+    //   background-color: burlywood;
+    //   display: relative;
+    //   color: #db2269;
+    //   font-size: 1.2rem;
+    // }
     small {
       //background-color: mediumseagreen;
       display: block;
-      padding-bottom: 10px;
+      text-align: center;
+      padding: 2px 0 10px;
     }
 
-    .fullName,
+    //SHARED
+    .firstName,
+    .lastName,
     .userName,
     .email,
     .password,
@@ -119,21 +152,11 @@
       flex-wrap: wrap;
     }
 
-    #label-newsletter {
-      //background-color: limegreen;
-      padding-right: 4px;
-    }
-    .choices {
-      width: 100%;
-      text-align: center;
-      padding-bottom: 10px;
-    }
-
     .display-errorMsg {
       //background-color: greenyellow;
 
       p {
-        color: red;
+        color: #ff0000;
         text-align: center;
       }
     }
@@ -151,21 +174,17 @@
       //background-color: greenyellow;
     }
 
-    .forgot-password button {
-      //appearance: none;
-      background-color: transparent;
-      text-decoration: underline;
+    // .forgot-password button {
+    //   //appearance: none;
+    //   background-color: transparent;
+    //   text-decoration: underline;
 
-      color: black;
-      color: #2f5735e3;
+    //   color: black;
+    //   color: #2f5735e3;
 
-      cursor: pointer;
-      padding: 0;
-    }
-  }
-  input {
-    background-color: transparent;
-    color: white;
+    //   cursor: pointer;
+    //   padding: 0;
+    // }
   }
 }
 
