--- a/src/pages/Login_Register/Register/Register.scss
+++ b/src/pages/Login_Register/Register/Register.scss
@@ -1,3 +1,3 @@
-.container__form {
-  background-image: url("../../../img/br_01.jpg");
-}
+// .container__form {
+
+// }
